# promisetracker

./: .gitignore  README.md  sample.env
backend/: pyproject.toml  startup.sh
backend/ptracker/: main.py  models.py  seed.py
backend/ptracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/ptracker/api/: main.py
backend/ptracker/api/models/: __init__.py  _associations.py  action.py  candidate.py  citation.py  promise.py  source.py
backend/ptracker/api/routes/: actions.py  candidates.py  citations.py  promises.py  sources.py
backend/ptracker/core/: constants.py  db.py  llm_utils.py  prompts.py  settings.py  source_analyzer.py  utils.py
backend/ptracker/core/sources/: __init__.py  entity_extractor.py  source_analyzer.py
backend/tests/: utils.py
experiments/: extraction_evals.ipynb
frontend/: package.json
frontend/ptracker/: package-lock.json  package.json
frontend/ptracker/src/: App.css  App.jsx  PoliticiansPage.jsx  PromiseCard.css  PromiseCard.jsx
frontend/ptracker/src/AboutPage/: AboutPage.jsx
frontend/ptracker/src/ContactPage/: ContactPage.jsx
frontend/ptracker/src/HomePage/: CandidateProfile.jsx  CategoryLabel.jsx  HomePage.jsx  PromisePopup.jsx  PromisesList.jsx  PromisesTable.jsx  StatusLabel.jsx
frontend/ptracker/src/LoginPage/: LoginPage.jsx
frontend/ptracker/src/PoliticiansPage/: PoliticiansPage.jsx
